--- a/Raptor/buildspec.yml
+++ b/Raptor/buildspec.yml
@@ -6,12 +6,12 @@ phases:
       dotnet: 7.0
     commands:
       - echo Installing dependencies...
-      - dotnet restore
+      - dotnet restore Raptor.Api/Raptor.Api.csproj
 
   pre_build:
     commands:
       - echo Building the project...
-      - dotnet build
+      - dotnet build Raptor.Api/Raptor.Api.csproj
 
   build:
     commands:
@@ -20,6 +20,7 @@ phases:
 
   post_build:
     commands:
+      - dotnet publish Raptor.Api/Raptor.Api.csproj -c Release -o ./publish
       - echo Build completed!
 
 artifacts:
