--- a/Raptor/buildspec.yml
+++ b/Raptor/buildspec.yml
@@ -2,25 +2,13 @@ version: 0.2
 
 phases:
   install:
-    runtime-versions:
-      dotnet: 7.0
     commands:
-      - echo Installing dependencies...
-      - dotnet restore Raptor.Api/Raptor.Api.csproj
-
-  pre_build:
-    commands:
-      - echo Building the project...
-      - dotnet build Raptor.Api/Raptor.Api.csproj
+      - curl -sSL https://dot.net/v1/dotnet-install.sh | bash /dev/stdin --channel STS
 
   build:
     commands:
-      - echo Testing the project...
-
-  post_build:
-    commands:
-      - dotnet publish -c Release -o ./app/ Raptor.Api/Raptor.Api.csproj
-      - echo Build completed!
+      - dotnet restore Raptor.sln
+      - dotnet build Raptor.sln
 
 artifacts:
   files:
