--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,28 +2,16 @@ version: 0.2
 
 phases:
   install:
-    runtime-versions:
-      dotnet: 6.0
     commands:
-      - echo Installing dependencies...
-      - dotnet restore Raptor/Raptor.Api/Raptor.Api.csproj
-
-  pre_build:
-    commands:
-      - echo Building the project...
-      - dotnet build Raptor/Raptor.Api/Raptor.Api.csproj
+      - curl -sSL https://dot.net/v1/dotnet-install.sh | bash /dev/stdin --channel STS
 
   build:
     commands:
-      - echo Testing the project...
-      - dotnet test
-
-  post_build:
-    commands:
-      - dotnet publish -c Release -o ./app/ Raptor/Raptor.Api/Raptor.Api.csproj
-      - echo Build completed!
+      - dotnet restore Raptor/Raptor.sln
+      - dotnet build Raptor/Raptor.sln --configuration Release
 
 artifacts:
   files:
     - '**/*'
   discard-paths: yes
+
